--- a/style.css
+++ b/style.css
@@ -166,6 +166,19 @@ h1, h2, p{
     padding-left: 10px;
     padding-right: 10px;
     height: 20px;
+    width: auto;
+}
+
+button.search {
+    margin-left: -35px;
+    border: none;
+    border-left: black 1px solid;
+    background: transparent;
+    border-radius: 4px;
+    height: 25px;
+    width: 29px;
+    z-index: 99;
+    cursor: pointer;
 }
 
 .navbar3 ul{
@@ -184,6 +197,22 @@ h1, h2, p{
     background-color: green;
     text-align: center;
     color: white;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    gap: 10px;
+}
+
+.sidebar3 ul{
+    list-style: none;
+    gap: 15px;
+    margin-right: 30px;
+}
+
+.sidebar3 ul li a{
+    text-decoration: none;
+    color: white;
+    font-size: x-large
 }
 
 .container3{
@@ -191,6 +220,8 @@ h1, h2, p{
     background-color: blue;
     text-align: center;
     color: white;
+    width: fit-content;
+    height: fit-content;
 }
 
 .article3{
@@ -200,20 +231,27 @@ h1, h2, p{
     margin: 20px 20px 20px 20px;
     padding: 10px;
     border-radius: 4px;
-    height: 80%;
+    max-height: fit-content;
 }
 
-.ads3{
+.ads3 {
     grid-area: ads;
     background-color: sienna;
     text-align: center;
     color: white;
+    display: grid;
+    align-content: center;
 }
 
 .footer3{
     grid-area: footer;
-    background-color: orange;
+    background-color: darkcyan;
     text-align: center;
     color: white;
     border-radius: 0 0 14px 14px;
+    display: flex;
+    flex-wrap: nowrap;
+    justify-content: space-around;
+    align-items: center;
+    font-size: larger;
 }
